--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-PORT = 5000
-DB_NAME = Portal_turismo
-DB_USER = root
-DB_PASSWORD = q1w2e3
-DB_HOST = 127.0.0.1
-DB_PORT = 3306
+DATABASE_URL=postgresql://portal_turismo_v2rq_user:8GkZGKQMGybYDIVv4lkqD0Kqu5fCGjid@dpg-d25q6ser433s73dv3eeg-a.oregon-postgres.render.com/portal_turismo_v2rq
+PORT=3000
